--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -425,5 +425,5 @@ img {
   background-position: center;
 }
 .antenna-icon::before {
-  background-image: url("../images/HomeWork4/SVG/Vector.svg");
+  background-image: url("../images/HomeWork4/SVG/antenna\ 1.svg");
 }
